--- a/Sections/COM.tex
+++ b/Sections/COM.tex
@@ -141,7 +141,7 @@ seconda versione, che permette di lavorare anche sfruttando un'apposita licenza 
 infatti definiscono un metodo per
 creare un'istanza dell'oggetto, oppure di ottenere un riferimento all'oggetto già
 esistente (CreateInstance). Questo metodo (e le sue varianti) devono quindi
-esplorare il registry alla ricerca di un oggetto che implementa l'interfaccia ricercata; si può anche specicare un
+esplorare il registry alla ricerca di un oggetto che implementa l'interfaccia ricercata; si può anche specificare un
 contesto, ovvero spiegare dove si potrebbe
 ricercare l'oggetto.
 Esistono 3 tipi possibili di server in COM:
@@ -330,7 +330,7 @@ del tutto simile a CORBA!
 L'attivazione a chi tocca? Non son presenti dei POA come in CORBA,
 quindi si potrebbe prima di tutto pensare ad un'attivazione da parte del cliente
 (esistono meccanismi per fare il lease, e quindi mantenere il collegamento con il
-server oltre al tempo specicato38 ). In questa maniera si può anche mantenere
+server oltre al tempo specificato38 ). In questa maniera si può anche mantenere
 uno stato.
 Gli oggetti remoti possono anche essere attivati dai server, in due diversi
 modi:
