--- a/Sections/Mobile.tex
+++ b/Sections/Mobile.tex
@@ -240,7 +240,7 @@ magari trasportando solo le dierenze rispetto ad uno stato iniziale o una sintes
 dei risultati ottenuti.
 \subsection{Classicazione della mobilità}
 Per gli agenti mobili, si può classificare in diversi gradi la mobilità:
-$\bullet$ Forte: In ogni punto del codice è possibile specicare la mobilità. Tali
+$\bullet$ Forte: In ogni punto del codice è possibile specificare la mobilità. Tali
 sistemi sono in realtà dicilmente realizzabili, perché presentano grossi
 problemi di supporto.
 89
