--- a/Sections/Comunicazione.tex
+++ b/Sections/Comunicazione.tex
@@ -7,7 +7,7 @@ Nel modello di Internet erano stati studiati due sistemi: il broadcast (realment
 il multicast (realizzabile su indirizzi di classe D). Tuttavia, questi sistemi risultano essere efficienti finché si
 lavora comunque con una località. Se invece si dovesse lavorare su più gruppi, è necessario utilizzare come protocollo
 IGMP (utilizzo quindi di un protocollo non locale), che permette a una o più reti di trasmettere in multicast,
-realizzando una sorta di\footnote{Obiettivo: raggiungere un qualunque indirizzo della classe specicata, che sia il più
+realizzando una sorta di\footnote{Obiettivo: raggiungere un qualunque indirizzo della classe specificata, che sia il più
 vicino o il più comodo} broadcast locale (comunque abbastanza costoso)\footnote{L'alternativa è peggiore: fare un
 flooding globale! Ma per mandare un messaggio a tutti, i router dovrebbero avere uno stato, e vericare che il messaggio
 non l'abbiano già ricevuto... quanto deve durare lo stato?}. Oltre al costo, queste comunicazioni mancano prima di 
@@ -56,35 +56,31 @@ della QoS con i servizi integrati di frame.
 Infatti si lavora spesso con stati non permanenti (soft state dalla durata limitata: gli intervalli sono un parametro
 critico della progettazione), alberi dinamici in grado di fare riorganizzazioni locali. Le operazioni di base riguardano
 la potatura (eliminazione di un router superfluo) e il reinserimento o graft dinamico (reinserimento di router). Si deve
-quindi spesso ricalcolare l'albero in caso di
-variazioni! Le varie proposte sono:
-$\bullet$ Distance Vector Multicast Routing Protocol : è basato su una multicast
-bone, si attraversano le reti utilizzando un sistema di tunneling. Il risultato
-` che così si sfruttano solo alcuni nodi.
-\i{}
-$\bullet$ Multicast Open Shortest Path First: questo sistema invece si basa sull'altra tecnologia, e cerca di
-ottimizzare l'albero già ottenuto determinato i
-cammini minimi
-$\bullet$ Core Based Trees: si mantengono costanti dei nodi, venendo a definire
-quindi degli alberi sub-ottimi che non variano. In questo modo si limita il
-costo della variazione dell'albero.
-Il problema però è tutti questi protocolli sono incompatibili fra di loro: non
-o e
-possono essere attivati contemporaneamente, o se ne sceglie uno o l'altro!
+quindi spesso ricalcolare l'albero in caso di variazioni! Le varie proposte sono:
+\begin{itemize}
+ \item \textit{Distance Vector Multicast Routing Protocol}: è basato su una multicast bone, si attraversano le reti
+ utilizzando un sistema di tunneling. Il risultato è che così si sfruttano solo alcuni nodi.
+ \item \textit{Multicast Open Shortest Path First}: questo sistema invece si basa sull'altra tecnologia, e cerca di
+ ottimizzare l'albero già ottenuto determinato i cammini minimi
+ \item \textit{Core Based Trees}: si mantengono costanti dei nodi, venendo a definire quindi degli alberi sub-ottimi
+ che non variano. In questo modo si limita il costo della variazione dell'albero.
+\end{itemize}
+Il problema però è tutti questi protocolli sono incompatibili fra di loro: non possono essere attivati
+contemporaneamente, o se ne sceglie uno o l'altro!
 \subsection{Semantica della comunicazione di gruppo}
-Come realizzare la semantica della comunicazione di gruppo? Conviene fornire
-delle conferme positive (i riceventi avvisano di aver ricevuto il messaggio) oppure
-quelle negative (chi non ha ricevuto avvisa)? Si ritrasmette a tutti o solo a chi
-non ha ricevuto il messaggio?
-40
-In generale l'obiettivo che si pressa è che una send multicast dovrebbe
-essere garantita come un'operazione atomica. Per risolvere il problema, conviene
-suddividerlo in due sottoproblemi:
-1. Garantire la fault tolerance: nessuno deve perdere dei messaggi! Le ritrasmissioni sono quindi un sistema da
-prevedere se si vuole affidabilità.
-Tuttavia, si potrebbe rimbalzare il problema a livello applicativo: per
-esempio Chorus eettua multicast mai ripetuti, quindi unreliable, ma
-specica agli sviluppatori di realizzare il sistema di ritrasmissione.
+Come realizzare la semantica della comunicazione di gruppo? Conviene fornire delle conferme positive (i riceventi
+avvisano di aver ricevuto il messaggio) oppure quelle negative (chi non ha ricevuto avvisa)? Si ritrasmette a tutti o
+solo a chi non ha ricevuto il messaggio?
+In generale l'obiettivo che si prefissa è che una send multicast dovrebbe essere garantita come un'operazione atomica.
+Per risolvere il problema, conviene suddividerlo in due sottoproblemi:
+\begin{enumerate}
+ \item Garantire la \textit{fault tolerance}: nessuno deve perdere dei messaggi! Le ritrasmissioni sono quindi un
+ sistema da prevedere se si vuole affidabilità.
+ Tuttavia, si potrebbe rimbalzare il problema a livello applicativo: per esempio Chorus effettua multicast mai 
+ ripetuti, quindi unreliable, ma specifica agli sviluppatori di realizzare il sistema di ritrasmissione.
+\end{enumerate}
+
+1. 
 2. Fornire l'atomicità della trasmissione: per atomicità si intende l'ordine
 con cui i messaggi giungono al gruppo. Si dovrebbe fare in modo infatti
 che tutti i membri del gruppo li ricevano nello stesso ordine?Non è detto
@@ -412,7 +408,7 @@ $\bullet$ ISIS: è un sistema totalmente basato su gruppi e risorse di gruppo, p
 si necessita di coordinarsi fra le varie copie attive dotate di replicazione.
 Prevede l'utilizzo di diverse forme di multicast, distinte a seconda del tipo
 di ordinamento. Di base si hanno infatti le multicast per i 3 ordinamenti
-specicati (FIFO, causal e atomic), ma inoltre è presente una particolare
+specificati (FIFO, causal e atomic), ma inoltre è presente una particolare
 multicast, che serve proprio per la gestione del gruppo stesso. Utilizzando
 questa multicast, infatti, un gruppo può cambiare la propria granularit`,
 eliminando copie non attive o reintroducendo quelle che hanno subito recovery. Caratteristica fondamentale è che il
