--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -338,7 +338,7 @@ allocate, si ha quindi che si avrà uno speeda
 up sso, mentre sarà l'efficienza a variare a seconda dell'architettura del sistema!
 Come calcolare quindi lo speed-up massimo? Si vuole avere il numero di
 processori tali che si abbia la minore complessità del problema, realizzando un
-sistema fortemente caricato: si denite quindi l'heavily loaded limit:
+sistema fortemente caricato: si definite quindi l'heavily loaded limit:
 THL (N ) = infP (TP (N ))
 (7)
 Infatti, si lavora bene caricando molto ogni processore, i quali quindi lavorano
