--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -166,7 +166,7 @@ varie entità. Basandosi sui messaggi, si supera direttamente l'eterogeneità.
 Il problema è come fornire QoS ai messaggi? I messaggi devono essere pere
 manenti (non è necessaria la presenza di entrambi gli attori per realizzare la
 54
-comunicazione), ma soprattutto l'interconnessione è denita assolutamente in
+comunicazione), ma soprattutto l'interconnessione è definita assolutamente in
 maniera statica! Non sono quindi mw dinamici.
 Ogni attore interessato presenta una propria coda locale, dove saranno depositati i messaggi: questo è un supporto
 fornito quindi dal MOM, per cui si
@@ -289,7 +289,7 @@ strategie d'attivazione, magari denibili in maniera opportuna dai client!
 $\bullet$ Holder : questo è un pattern necessario per risolvere certi problemi d'eteroe
 geneit`. Si preoccupa infatti di incapsulare in maniera opportuna gli
 oggetti per presentarli a certi sistemi in maniera che possano trattarli
-mediante le semantiche da loro denite. Un esempio riguarda per esempio linguaggi che permettono parametri di in/out e
+mediante le semantiche da loro definite. Un esempio riguarda per esempio linguaggi che permettono parametri di in/out e
 quelli che non lo
 permettono. Si hanno quindi come possibili operazioni read/write.
 57
