--- a/Sections/Mobile.tex
+++ b/Sections/Mobile.tex
@@ -267,7 +267,7 @@ applicazioni indipendentemente da quale macchina stia utilizzando.
 $\bullet$ Terminali mobili : potrebbe aver senso utilizzare gli agenti. Si tratta infatti
 dell'idea di realizzare terminali in grado di lavorare comunque ed ovunque
 si trovino.
-$\bullet$ Codice mobile: denitivamente utile utilizzare gli agenti.
+$\bullet$ Codice mobile: definitivamente utile utilizzare gli agenti.
 \subsection{Gli agenti mobili}
 Sono delle entità che si devono muovere per eseguire i propri compiti, operando
 per conto di un principal. Si tratta quindi di sistemi in cui il programmatore stabilisce la mobilità, e in cui si
