--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -403,7 +403,7 @@ fare spesso delle supposizioni per limitare
 l'overhead (il ricevitore sa a chi mandare per primo le richieste, il servitore sa
 chi potrebbe essere interessato al servizio, . . . ).
 Il problema di RSVP è che è un protocollo con una forte intrusione, perché si
-ha una parte statica molto ben denita, ma che potrebbe essere solo ideale (non
+ha una parte statica molto ben definita, ma che potrebbe essere solo ideale (non
 funzionerebbe bene in presenza di nodi congestionati). Per questo, a supporto
 di questo protocollo per la parte statica, sono stati sviluppati altri protocolli
 per il supporto alla QoS a livello applicativo per la parte dinamica. Sono il Real
@@ -456,7 +456,7 @@ lavora solo sugli end-point. E sempre possibile comunque tornare a RSVP nel
 caso non fosse suciente.
 \subsection{Servizi differenziati, RFC 2474}
 L'approccio a servizi differenziati consiste nel cercare di fornire QoS non a livello
-applicativo, ma a livello di rete. Facendo ciò, in realtà, si ha che si sono deniti
+applicativo, ma a livello di rete. Facendo ciò, in realtà, si ha che si sono definiti
 molti meno protocolli rispetto ai servizi integrati (risultando essere inoltre molto
 più scalabili). I servizi dierenziati sono studiati per supportare le applicazioni
 legacy e per domini specici (comunità di utenti). L'idea è quella che si devono
