--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -418,7 +418,7 @@ spesos è il vero collo di bottiglia in diverse architetture. Inoltre, vi son di
 15
 fattori che possono influenzare l'efficienza e lo speed-up dell'architettura, come
 il deployment reale. Si possono quindi estendere gli indicatori considerando
-l'eetto generale dell'overhead, T0 (N ), che rappresenta le risorse e il tempo
+l'effetto generale dell'overhead, T0 (N ), che rappresenta le risorse e il tempo
 realmente utilizzato per la comunicazione (caso ideale di deployment):
 T0 (N ) = |T1 (N ) $-$ P · TP (N )|
 (9)
