--- a/Sections/COM.tex
+++ b/Sections/COM.tex
@@ -80,7 +80,7 @@ L'interfaccia funziona semplicemente come un puntatore alle funzioni che descriv
 table: ogni entry di questa tabella punta
 al codice che i metodi devono implementare. In COM non esiste l'ereditarietà
 a livello di classe ma solo (anche multipla) a livello di interfacce. Si ha quindi
-un grafo che rappresenta l'ereditarietà, che spesso è dicile da navigare! I nomi
+un grafo che rappresenta l'ereditarietà, che spesso è difficile da navigare! I nomi
 univoci sono infatti tutti registrati nel registry, a seconda della loro applicazione.
 L'interfaccia IUnknown presenta solo 3 metodi (presenti sempre nei primi
 3 slot di ogni VMT di ogni componente): uno per aggiungere un riferimento
@@ -185,7 +185,7 @@ modello realizzato per cercare di andare oltre al classico modello a code di eve
 Inizialmente, automation nasce come possibilità per linguaggi dinamici (tipo
 quelli di scripting per il Web) di poter accedere all'architettura COM. Questo
 genere di linguaggi infatti spesso sono loosely-typed e studiati in maniera tale
-da avere poco controllo. Prima di automation risultava dicile realizzare proxy
+da avere poco controllo. Prima di automation risultava difficile realizzare proxy
 anche per questi linguaggi.
 Quello che fa automation è semplicemente la realizzazione in automatico di
 una DLL che funzioni come intermediario fra i due mondi, fra COM e qualsiasi
