--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -247,11 +247,11 @@ tutte le macchine, dove scrivere e leggere i risultati (anche i dispositivi di I
 sono unici per tutte le macchine). Si tratta di un modello MIMD sincrono, per
 cui quando tutti i programmi niscono, anche la macchina termina. Essendo
 dotata di un'unica memoria, come devino essere strutturate le operazioni? La
-concorrenza è un requisito dicile da realizzare, in confronto al mettere le opere
+concorrenza è un requisito difficile da realizzare, in confronto al mettere le opere
 azioni in sequenza. Le diverse PRAM si possono quindi categorizzare a seconda
 della tipologia delle operazioni (in generale si hanno letture concorrenti e scritture sequenziali; la concorrenza `
 invece utilizzata per il sistema di I/O, per
-limitarne il collo di bottiglia). Un PRAM è dicile da realizzare perché non è
+limitarne il collo di bottiglia). Un PRAM è difficile da realizzare perché non è
 scalabile.
 Un secondo modello è il Message Passing RAM, che è sempre una collezione
 di RAM, ma ognuna con la sua memoria dedicata (i sistemi di I/O son sempre
@@ -262,7 +262,7 @@ vuol dire che un'operazione sblocca la sua duale. Una MP-RAM è più facilmente
 e u
 realizzabile, e rappresenta meglio un modello locale. Se per esempio si volesse
 eseguire un broadcast, servono almeno P-1 istruzioni, mentre una PRAM, per
-quanto più dicile da realizzare, richiederebbe una sola operazione: è un modu
+quanto più difficile da realizzare, richiederebbe una sola operazione: è un modu
 ello con maggiore capacità espressiva. Restano comunque entrambi dei modelli
 troppo astratti per poter essere implementati realmente. Aggiungendo vincoli
 2 Si tratta di un consorzio di aziende per le telecomunicazioni, con l'obiettivo di andare
