--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -157,7 +157,7 @@ costose quindi, e limitare l'uso delle risorse necessarie al monitoring! In un
 ipotetico sistema quindi il piano utente (quello della gestione del servizio) e
 quello del management sono accoppiati, ma dovrebbero essere strutturati in
 maniera tale da condividere il minor numero di risorse. Il problema di Internet
-` che siamo sempre in piano utente, e quindi è dicile capire se ci sono problemi.
+` che siamo sempre in piano utente, e quindi è difficile capire se ci sono problemi.
 Il piano del management in realtà può essere scomposto in diverse sottoparti,
 a o
 a seconda di cosa si vuole gestire: vi è una parte per l'identicazione di fault
@@ -314,7 +314,7 @@ usso una propria share della banda, ed è una politica molto buona se i
 datagrammi dei vari ussi sono circa delle stesse dimensioni (altrimenti,
 si potrebbe usare un weighted round robin, per poter pesare diversamente
 i datagrammi. Pi` un datagramma è pesato, maggiori risorse vi sono
-associate. La normalizzazione è dicile da realizzare per ussi troppo
+associate. La normalizzazione è difficile da realizzare per ussi troppo
 corti) Il round robin viene spesso implementata in quei router in cui non
 si possono specificare delle priorità speciche, ma in cui comunque i ussi
 devono competere per delle risorse.
