--- a/Sections/Replicazione.tex
+++ b/Sections/Replicazione.tex
@@ -127,7 +127,7 @@ Il secondo caso in realtà è il peggiore, dovuto magari a problemi di aggiornam
 copia\footnote{Osservazione: è sicuramente conveniente un'indicazione di tempo per la scrittura, in maniera tale da
 poter aggiornare tutte le copie al dato più recente effettivamente presente}: clienti che accedono alla seconda copia
 prima della fase di recovery non potrebbero accorgersi che il dato è stale. Ogni operazione deve procedere su tutte le
-copie quindi per poter garantire risultati corretti! Tale sistema è sicuramente costoso e dicile da realizzare.
+copie quindi per poter garantire risultati corretti! Tale sistema è sicuramente costoso e difficile da realizzare.
 Un'ulteriore aspetto riguarda un sistema software per fare il monitoraggio delle risorse, necessario e conveniente da
 mettere in parallelo al sistema di recovery hardware: si tratta quindi di progettare degli appositi protocolli e sistemi
 in grado di permettere all'applicazione di ripartire con il minimo costo e nel minimo tempo. Il problema di ciò è che un
